Net: CNSS: refactoring CNSS platform Driver
Separate the WLAN CNSS platform driver according to
the bus interface PCIe and SDIO. Add separate Kernel
Config file for the WLAN CNSS platform Driver and its
necessary module which has support for the CNSS
connectivity Subsystem.

Add Kernel Config flag to refactoring the CNSS platform Driver:

CONFIG_CNSS Kernel Config add support to CNSS Core
driver compilation and export Generic GPL wrappers.

CONFIG_CNSS_SDIO Kernel Config add support to CNSS
Platform Driver compilation for SDIO based WiFi Devices
and export platform driver API's based on the SDIO bus.

CONFIG_CNSS_PCI Kernel Config add support to CNSS
Platform Driver compilation for PCIe based WiFi Devices
and export platform driver API's based on the PCIe bus.

Change-Id: I8cce5bbc87e6742179a7967ccba295f55c444b28
Signed-off-by: Kai Liu <kaliu@codeaurora.org>
Signed-off-by: Sarada Prasanna Garnayak <sgarna@codeaurora.org>
Signed-off-by: Amarnath Hullur Subramanyam <amarnath@codeaurora.org>
Signed-off-by: Srinivas Girigowda <sgirigow@codeaurora.org>

--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -1508,12 +1508,7 @@ CONFIG_WLAN=y
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH6K_LEGACY_EXT is not set
 # CONFIG_WCNSS_CORE is not set
-CONFIG_CNSS=y
-# CONFIG_CNSS_SECURE_FW is not set
-CONFIG_BUS_AUTO_SUSPEND=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
-# CONFIG_CNSS_MAC_BUG is not set
-CONFIG_CLD_LL_CORE=y
 CONFIG_ATH_CARDS=y
 # CONFIG_ATH_DEBUG is not set
 # CONFIG_ATH5K_PCI is not set
@@ -1525,6 +1520,15 @@ CONFIG_ATH_CARDS=y
 # CONFIG_LIBERTAS is not set
 # CONFIG_WL_TI is not set
 # CONFIG_MWIFIEX is not set
+CONFIG_CNSS=y
+# CONFIG_CNSS_PCI is not set
+# CONFIG_CNSS_SDIO is not set
+# CONFIG_CNSS_MAC_BUG is not set
+# CONFIG_CLD_DEBUG is not set
+# CONFIG_CLD_HL_SDIO_CORE is not set
+CONFIG_CLD_LL_CORE=y
+# CONFIG_CNSS_SECURE_FW is not set
+CONFIG_BUS_AUTO_SUSPEND=y
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -3285,6 +3289,7 @@ CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
 CONFIG_WLAN_FEATURE_MEMDUMP=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
+# CONFIG_WLAN_FEATURE_RX_WAKELOCK is not set
 
 #
 # Qualcomm MSM specific device drivers
