--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -253,11 +253,14 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_BFQ=y
+# CONFIG_CGROUP_BFQIO is not set
 CONFIG_IOSCHED_FIOPS=y
 # CONFIG_IOSCHED_SIO is not set
 CONFIG_IOSCHED_SIOPLUS=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
+# CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_SIOPLUS is not set
@@ -2657,6 +2660,7 @@ CONFIG_HID_CYPRESS=y
 # CONFIG_HID_EMS_FF is not set
 CONFIG_HID_ELECOM=y
 CONFIG_HID_EZKEY=y
+CONFIG_HID_FIIO=y
 CONFIG_HID_HOLTEK=y
 # CONFIG_HOLTEK_FF is not set
 # CONFIG_HID_KEYTOUCH is not set
@@ -4140,6 +4144,7 @@ CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4HC_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
