--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -1521,9 +1521,9 @@ CONFIG_ATH_CARDS=y
 # CONFIG_WL_TI is not set
 # CONFIG_MWIFIEX is not set
 CONFIG_CNSS=y
-# CONFIG_CNSS_PCI is not set
+CONFIG_CNSS_PCI=y
 # CONFIG_CNSS_SDIO is not set
-# CONFIG_CNSS_MAC_BUG is not set
+CONFIG_CNSS_MAC_BUG=y
 # CONFIG_CLD_DEBUG is not set
 # CONFIG_CLD_HL_SDIO_CORE is not set
 CONFIG_CLD_LL_CORE=y
