--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -361,7 +361,7 @@ CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 # CONFIG_ZBUD is not set
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
-# CONFIG_PROCESS_RECLAIM is not set
+CONFIG_PROCESS_RECLAIM=y
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
