--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -452,6 +452,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLUACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DESPAIR is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
@@ -465,6 +466,7 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPU_FREQ_GOV_BIOSHOCK is not set
 # CONFIG_CPU_FREQ_GOV_WHEATLEY is not set
 # CONFIG_CPU_FREQ_GOV_BLUACTIVE is not set
+CONFIG_CPU_FREQ_GOV_DESPAIR=y
 # CONFIG_CPU_BOOST is not set
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
