--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -3484,6 +3484,18 @@ CONFIG_LGE_HANDLE_PANIC=y
 CONFIG_MSM_TZ_LOG=y
 
 #
+# CPUQuiet Framework
+#
+CONFIG_CPU_QUIET=y
+CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=y
+CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE=y
+CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
+# CONFIG_CPU_QUIET_DEFAULT_GOV_USERSPACE is not set
+# CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
+CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
+CONFIG_CPU_QUIET_MSM=y
+
+#
 # Firmware Drivers
 #
 
@@ -3934,6 +3946,7 @@ CONFIG_CRYPTO_AES_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
+CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_BINARY_PRINTF=y
 
 #
