Bullhead: Regen defconfig
Change-Id: Ibe1e3737647d1b9574809536eed1c99dcbd519f5

--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -261,12 +261,12 @@ CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIOPLUS=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_BFQ is not set
-# CONFIG_DEFAULT_FIOPS is not set
+CONFIG_DEFAULT_FIOPS=y
 # CONFIG_DEFAULT_SIOPLUS is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="fiops"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -3495,9 +3495,9 @@ CONFIG_CPU_QUIET=y
 CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=y
 CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE=y
 CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
-# CONFIG_CPU_QUIET_DEFAULT_GOV_USERSPACE is not set
+CONFIG_CPU_QUIET_DEFAULT_GOV_USERSPACE=y
 # CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
-CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
+# CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE is not set
 CONFIG_CPU_QUIET_MSM=y
 
 #
