Bullhead: Regen defconfig
Change-Id: I50aefc27eaa74950fbc008ec3eb7c613c4d2a46b

--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -3287,9 +3287,13 @@ CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_WLAN_FEATURE_NAN=y
 CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
+# CONFIG_WLAN_SYNC_TSF is not set
 CONFIG_WLAN_FEATURE_MEMDUMP=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
+# CONFIG_QCA_WIFI_AUTOMOTIVE_CONC is not set
+# CONFIG_WLAN_UDP_RESPONSE_OFFLOAD is not set
 # CONFIG_WLAN_FEATURE_RX_WAKELOCK is not set
+# CONFIG_WLAN_WOW_PULSE is not set
 
 #
 # Qualcomm MSM specific device drivers
@@ -3578,6 +3582,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
 # CONFIG_ECRYPT_FS is not set
+# CONFIG_SDCARD_FS is not set
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
