--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -193,9 +193,9 @@ CONFIG_ARCH_WANT_COMPAT_IPC_PARSE_VERSION=y
 CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_SECCOMP_FILTER=y
 CONFIG_HAVE_CC_STACKPROTECTOR=y
-# CONFIG_CC_STACKPROTECTOR is not set
-CONFIG_CC_STACKPROTECTOR_NONE=y
-CONFIG_CC_STACKPROTECTOR_REGULAR=y
+CONFIG_CC_STACKPROTECTOR=y
+# CONFIG_CC_STACKPROTECTOR_NONE is not set
+# CONFIG_CC_STACKPROTECTOR_REGULAR is not set
 # CONFIG_CC_STACKPROTECTOR_STRONG is not set
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
@@ -3469,9 +3469,10 @@ CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PACMAN is not set
 # CONFIG_MSM_CORE_CTL_HELPER is not set
-CONFIG_MSM_PERFORMANCE=y
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
+CONFIG_BRICKED_HOTPLUG=y
 # CONFIG_STATE_NOTIFIER is not set
 CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
@@ -3498,7 +3499,7 @@ CONFIG_MSM_TZ_LOG=y
 #
 CONFIG_CPU_QUIET=y
 CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=y
-CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE=y
+# CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE is not set
 CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
 CONFIG_CPU_QUIET_DEFAULT_GOV_USERSPACE=y
 # CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
