--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -461,11 +461,11 @@ CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-# CONFIG_CPU_FREQ_GOV_INTELLIACTIVE is not set
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 # CONFIG_CPU_FREQ_GOV_LIONHEART is not set
-# CONFIG_CPU_FREQ_GOV_BIOSHOCK is not set
-# CONFIG_CPU_FREQ_GOV_WHEATLEY is not set
-# CONFIG_CPU_FREQ_GOV_BLUACTIVE is not set
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_BLUACTIVE=y
 CONFIG_CPU_FREQ_GOV_DESPAIR=y
 # CONFIG_CPU_BOOST is not set
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
