--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -193,9 +193,9 @@ CONFIG_ARCH_WANT_COMPAT_IPC_PARSE_VERSION=y
 CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_SECCOMP_FILTER=y
 CONFIG_HAVE_CC_STACKPROTECTOR=y
-CONFIG_CC_STACKPROTECTOR=y
-# CONFIG_CC_STACKPROTECTOR_NONE is not set
-# CONFIG_CC_STACKPROTECTOR_REGULAR is not set
+# CONFIG_CC_STACKPROTECTOR is not set
+CONFIG_CC_STACKPROTECTOR_NONE=y
+CONFIG_CC_STACKPROTECTOR_REGULAR=y
 # CONFIG_CC_STACKPROTECTOR_STRONG is not set
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
@@ -422,6 +422,7 @@ CONFIG_PM_CLK=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
+CONFIG_SUSPEND_TIME_TIMEKEEPING=y
 CONFIG_PM_SYNC_BEFORE_SUSPEND=y
 # CONFIG_PARTIALRESUME is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
@@ -2648,10 +2649,6 @@ CONFIG_SND_SOC_MSM_QDSP6V2_INTF=y
 # CONFIG_SND_SOC_QDSP6 is not set
 CONFIG_SND_SOC_QDSP6V2=y
 # CONFIG_AUDIO_OCMEM is not set
-# CONFIG_DOLBY_DAP is not set
-CONFIG_DTS_EAGLE=y
-CONFIG_DOLBY_DS2=y
-CONFIG_DTS_SRS_TM=y
 CONFIG_QTI_PP=y
 CONFIG_SND_SOC_CPE=y
 CONFIG_SND_SOC_MSM8994=y
@@ -3469,7 +3466,7 @@ CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PACMAN is not set
 # CONFIG_MSM_CORE_CTL_HELPER is not set
-# CONFIG_MSM_PERFORMANCE is not set
+CONFIG_MSM_PERFORMANCE=y
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
 CONFIG_BRICKED_HOTPLUG=y
@@ -3497,14 +3494,7 @@ CONFIG_MSM_TZ_LOG=y
 #
 # CPUQuiet Framework
 #
-CONFIG_CPU_QUIET=y
-CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=y
-# CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE is not set
-CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
-CONFIG_CPU_QUIET_DEFAULT_GOV_USERSPACE=y
-# CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
-# CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE is not set
-CONFIG_CPU_QUIET_MSM=y
+# CONFIG_CPU_QUIET is not set
 
 #
 # Firmware Drivers
