--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -3370,7 +3370,7 @@ CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
-CONFIG_ADRENO_IDLER=y
+# CONFIG_ADRENO_IDLER is not set
 CONFIG_MSM_BIMC_BWMON=y
 CONFIG_DEVFREQ_GOV_MSM_GPUBW_MON=y
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
@@ -3472,7 +3472,6 @@ CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
 CONFIG_BRICKED_HOTPLUG=y
 # CONFIG_STATE_NOTIFIER is not set
-# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
 CONFIG_MACH_LGE=y
 
