Bullhead: Regen defconfig
Change-Id: If92f99d70214813993fd178b73531b5297b4af95

--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -3470,7 +3470,7 @@ CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PERFORMANCE is not set
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
-CONFIG_BRICKED_HOTPLUG=y
+# CONFIG_BRICKED_HOTPLUG is not set
 # CONFIG_STATE_NOTIFIER is not set
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
 CONFIG_MACH_LGE=y
