Bullhead: Regen defconfig
Change-Id: Ib1ec5139780f7568ed21ad3b690c0318feff5b9b

--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -252,7 +252,7 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
-CONFIG_IOSCHED_ZEN=y
+# CONFIG_IOSCHED_ZEN is not set
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 # CONFIG_CGROUP_BFQIO is not set
@@ -468,7 +468,7 @@ CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_BLUACTIVE=y
-CONFIG_CPU_FREQ_GOV_DESPAIR=y
+# CONFIG_CPU_FREQ_GOV_DESPAIR is not set
 # CONFIG_CPU_BOOST is not set
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
