--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -173,6 +173,7 @@ CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
+CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
 # CONFIG_JUMP_LABEL is not set
@@ -259,7 +260,6 @@ CONFIG_IOSCHED_SIOPLUS=y
 # CONFIG_DEFAULT_ROW is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_FIOPS is not set
-# CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_SIOPLUS is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
@@ -363,10 +363,11 @@ CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_CLEANCACHE is not set
 # CONFIG_FRONTSWAP is not set
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
-# CONFIG_ZBUD is not set
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
+# CONFIG_ZPOOL is not set
+# CONFIG_ZBUD is not set
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
 CONFIG_SECCOMP=y
@@ -412,9 +413,10 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
-# CONFIG_DEDUCE_WAKEUP_REASONS is not set
+CONFIG_PM_SYNC_BEFORE_SUSPEND=y
 # CONFIG_PARTIALRESUME is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
@@ -812,6 +814,9 @@ CONFIG_NET_SCH_PRIO=y
 # CONFIG_NET_SCH_QFQ is not set
 # CONFIG_NET_SCH_CODEL is not set
 # CONFIG_NET_SCH_FQ_CODEL is not set
+# CONFIG_NET_SCH_FQ is not set
+# CONFIG_NET_SCH_HHF is not set
+# CONFIG_NET_SCH_PIE is not set
 # CONFIG_NET_SCH_INGRESS is not set
 # CONFIG_NET_SCH_PLUG is not set
 
@@ -1716,6 +1721,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
+CONFIG_FRANDOM=y
 
 #
 # Serial drivers
@@ -2554,6 +2560,7 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 # CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_EXYNOS_VIDEO is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 # CONFIG_ADF is not set
@@ -2986,7 +2993,6 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
 CONFIG_MMC_TEST=y
-CONFIG_MMC_BLOCK_TEST=y
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -3624,6 +3630,8 @@ CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
+# CONFIG_STATE_NOTIFIER is not set
+CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
 CONFIG_MACH_LGE=y
 
@@ -3843,6 +3851,7 @@ CONFIG_DEBUG_PREEMPT=y
 # CONFIG_RT_MUTEX_TESTER is not set
 # CONFIG_DEBUG_SPINLOCK is not set
 # CONFIG_DEBUG_MUTEXES is not set
+# CONFIG_DEBUG_WW_MUTEX_SLOWPATH is not set
 # CONFIG_DEBUG_LOCK_ALLOC is not set
 # CONFIG_PROVE_LOCKING is not set
 # CONFIG_LOCK_STAT is not set
@@ -4119,6 +4128,7 @@ CONFIG_CRC32_SLICEBY8=y
 CONFIG_LIBCRC32C=y
 # CONFIG_CRC8 is not set
 CONFIG_AUDIT_GENERIC=y
+# CONFIG_RANDOM32_SELFTEST is not set
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
