Bullhead: Regen defconfig

--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -287,6 +287,7 @@ CONFIG_ARM_AMBA=y
 CONFIG_PCI=y
 CONFIG_PCI_DOMAINS=y
 CONFIG_PCI_SYSCALL=y
+CONFIG_ARCH_SUPPORTS_MSI=y
 CONFIG_PCI_MSI=y
 # CONFIG_PCI_DEBUG is not set
 # CONFIG_PCI_REALLOC_ENABLE_AUTO is not set
@@ -416,6 +417,7 @@ CONFIG_PM_CLK=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
+CONFIG_SUSPEND_TIME_TIMEKEEPING=y
 CONFIG_PM_SYNC_BEFORE_SUSPEND=y
 # CONFIG_PARTIALRESUME is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
@@ -2619,13 +2621,13 @@ CONFIG_SND_SOC_QDSP6V2=y
 CONFIG_QTI_PP=y
 CONFIG_SND_SOC_CPE=y
 CONFIG_SND_SOC_MSM8994=y
+# CONFIG_SND_SOC_MSM8994_HDMI_CODEC_RX is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WCD9330=y
 CONFIG_SND_SOC_WCD9XXX=y
 CONFIG_SND_SOC_WCD_CPE=y
 CONFIG_SND_SOC_MSM_STUB=y
-CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
@@ -3709,6 +3711,7 @@ CONFIG_FAT_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
+# CONFIG_EXFAT_FS is not set
 # CONFIG_NTFS_FS is not set
 
 #
@@ -4076,6 +4079,8 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
 # CONFIG_CRYPTO_LZO is not set
+CONFIG_CRYPTO_LZ4=y
+CONFIG_CRYPTO_LZ4HC=y
 
 #
 # Random Number Generation
@@ -4103,6 +4108,7 @@ CONFIG_CRYPTO_AES_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
+CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_BINARY_PRINTF=y
 
 #
