Bullhead: Regen defconfig
Change-Id: If2bc7557411112802bade85e1e23990a56c9fe99

--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -361,7 +361,7 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
-CONFIG_KSM=y
+# CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
@@ -3661,11 +3661,11 @@ CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PACMAN is not set
 # CONFIG_MSM_CORE_CTL_HELPER is not set
-CONFIG_MSM_PERFORMANCE=y
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
-# CONFIG_STATE_NOTIFIER is not set
-CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
+CONFIG_STATE_NOTIFIER=y
+# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
 CONFIG_MACH_LGE=y
 
