Bullhead: Regen defconfig
Change-Id: I0c6cf18c2e949de8f6c5fdad8816219a84814fc7

--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -253,6 +253,7 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 # CONFIG_CGROUP_BFQIO is not set
@@ -266,6 +267,7 @@ CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_SIOPLUS is not set
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_MAPLE is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
@@ -3665,7 +3667,6 @@ CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
 CONFIG_STATE_NOTIFIER=y
-# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
 CONFIG_MACH_LGE=y
 
