--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -455,6 +455,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DESPAIR is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_IRONACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CHILL is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
@@ -466,6 +467,7 @@ CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_DESPAIR=y
 CONFIG_CPU_FREQ_GOV_IRONACTIVE=y
+CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
